--- a/app/graphQL/src/package.json
+++ b/app/graphQL/src/package.json
@@ -1,9 +1,21 @@
 {
+
+    
+  "type": "module",
+  "scripts": {
+    "scripted:schema":  "node ./generate_schema.js",
+    "start": "npm run scripted:schema && node app.js"
+  },
+  
+  
   "dependencies": {
     "@apollo/server-plugin-landing-page-graphql-playground": "^4.0.1",
     "apollo-server": "^3.13.0",
+    "dotenv": "^16.5.0",
     "graphql": "^16.10.0",
     "ioredis": "^5.6.0"
-  },
-  "type": "module"
+  }
+ 
+
+  
 }
