--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,47 +1,49 @@
-# Docker compose for Redis
-# Localhost with blindmount at ./redis_presist 
-# 
-version: "3.9"
+version: "3.8"
 
 services:
 
   redis:
-    image: redis
-    #commend: 
+    build: ./redis # Redis Stack image + Lua script for fake dataloading; #load test works with default fake dataset, See readme.
     ports:
-      - "6380:6379"
-#    develop:
-#      watch:
-#        - action: sync
-#          path: /
-#          target: /log
-    volumes: # tip: docker volume prune -f to clear docker cached volumes
-      #initial setip (for later: wired by script)
-      #redis-cli -h localhost -p 6379 < ./import_users.redis   
-      #redis-cli -h localhost -p 6380 CONFIG GET * > redis_runtime.conf
-      - ./redis_presist:/opt/app/static 
+      - "6370:6379" # This field is fixed until later dev changes ; container: 6379
+    #environment:
+      # Preservered field for scirpt control feature; this helps future development in 
+      # multilevel query/ subquery
+      # CLI in defualt dataset benchmark 
 
-      - redis_data:/data  # Other Redis/ non-user defined data 
-      # Alternative syntax ref
-      #- type: bind # To place redis config, Redis AOF or shared localhost files. 
+  graphql:
+    build: ./generic_graphQL  # Allows user to query with Redis CLI
+    ports:
+      - "4000:4000" # container: graphQL port 4000 pred-defined in code 
+    depends_on: #dependent images will get built first
+      - redis
+    #environment:
+      # Preservered field for scirpt control feature; this helps future development in 
+      # multilevel query/ subquery
 
-      #  target: /opt/app/static
+  fast_api:
+    build: ./generic_FastAPI/restAPI/fastAPI  # Allows user to query with Redis CLI
+    ports:
+      - "8000:8000" # container: fastAPI port 8000 pred-defined in code 
+    depends_on: #dependent images will get built first
+      - redis
+    #environment:
+      # Preservered field for scirpt control feature; this helps future development in 
+      # multilevel query/ subquery
+      # CLI in defualt dataset benchmark 
 
-      # for later: add flush cache.sh
-
-    networks:
-        - bench_the_query # to be replaced by an API Gateway or VPN-like layer in the future modular tests ###Futrue
-
-
-
-
-
-volumes:
-  redis_data:  # container & non-user setting data
-networks:
-    bench_the_query:
-        external: false
+  
+# Next: 
 
 
+#### aggregated containers: 
+# docker-compose  -d -p bench_query up: starts the containers in background, non-blocking 
 
+# docker-compose -p bench_query up: blocking; shows all logs
 
+#####
+# docker-compose build  : create image
+
+# docker-compose up  /   docker-compose up  -p bech_q : build automatically; docker check image upate
+
+# docker-compose up --build     : force reebuild and run
