--- a/load_test/docker-compose.yml
+++ b/load_test/docker-compose.yml
@@ -11,15 +11,18 @@ services:
     ports:
       - "1100:1100"
     volumes:
-      - ./results:/result
+      - ./results:/results
       - ./scripts:/scripts
     networks:
       - bench_q_debug  # Attach to the shared network
     environment:
       - FastAPI_URL= http://fast_api:8000/ 
+      
     #  - GRAPHQL_URL=http://graphql:4000/  # Set the environment variable to the GraphQL service URL 
     # depends_on:
     #   - graphql  # Ensure the 'graphql' service is ready before running tests
     #command: run  /scripts/graphQL_test.js
-    command: run  /scripts/fastAPI_test.js
+    command:  run --summary-export /results/fast_api_summary.json  /scripts/fastAPI_test.js 
 # Next: docker-compose up
+
+# extra tools: k6-web-dashboard replay --export test-report.html test-result.json -> https://github.com/grafana/xk6-dashboard/blob/master/docs/how-it-works.md 
