--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,14 +56,56 @@ services:
     networks:
       - bench_q  # Attach to the shared network
     environment:
+
       - GRAPHQL_URL=http://graphql:8000/  # Set the environment variable to the GraphQL service URL 
+      - K6_OUT=influxdb=http://influxdb:8086/k6db # influx db
     depends_on:
       - graphql  # Ensure the 'graphql' service is ready before running tests
-    command:  run --summary-export /results/fast_api_summary.json  /scripts/fastAPI_test.js 
+  
+    command:  run  /scripts/fastAPI_test.js 
  #run --summary-export /results/graphQL_test.json  /scripts/graphQL_test.js 
       
 
 
+
+  influxdb:
+    image: influxdb:1.8
+    #container_name: influxdb
+    ports:
+      - "8086:8086"
+    volumes:
+      - influxdb_data:/var/lib/influxdb # Presistance prupose;  V6 directly output to influx; to delete, check docker volume ls then docker volume rm xxx
+    networks:
+      - bench_q_debug
+    depends_on:
+      - k6
+    environment:
+      - INFLUXDB_DB=k6db #database name; listenign port: http://influxdb:8086/k6db
+
+
+
+  grafana:
+    image: grafana/grafana
+   #container_name: grafana
+    ports:
+      - "3000:3000" # post-result dashboard: loacalhost:3000
+    networks:
+      - bench_q_debug
+    depends_on:
+      - influxdb # V6 output -> influx DB -> gradana
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin 
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+    volumes:
+      - grafana_data:/var/lib/grafana
+
+
+
+
+
+volumes: # For presistance
+  influxdb_data:
+  grafana_data:
   
 # Next: 
 # 
