--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,9 +51,9 @@ services:
       # CLI in defualt dataset benchmark 
 
 
-  k6_fastAPI:
+  k6_fastAPI: # for next update, do them sequentially instead of roughly parallelly at concurrent request
     image: grafana/k6
-    container_name: k6_load_test
+    container_name: fastAPI_load_test
     ports:
       - "1100:1100"
     volumes:
@@ -65,10 +65,8 @@ services:
       - FastAPI_URL= http://fast_api:8000/ 
       - K6_OUT=influxdb=http://influxdb:8086/k6db
       - TYPE=fastapi
-    depends_on:
-      - graphql  # Ensure the 'graphql' service is ready before running tests
-
-
+    # depends_on:
+    #   - graphql  # Ensure the 'graphql' service is ready before running test
   
     command:  run  /scripts/fastAPI_test.js 
  #run --summary-export /results/graphQL_test.json  /scripts/graphQL_test.js 
@@ -76,6 +74,7 @@ services:
 
   k6_graphql: # one K6 for each API server benchmark; sequentially run
     image: grafana/k6
+    container_name: graphQL_load_test
     depends_on:
       k6_fastapi
     networks:
@@ -88,9 +87,8 @@ services:
       - K6_OUT=influxdb=http://influxdb:8086/k6db
       - TYPE=graphql
     
-    command: >
-      sh -c "while [ ! -f /results/fastapi_done.flag ]; do echo 'Waiting for fastapi test...'; sleep 2; done &&
-              k6 run --summary-export=/results/graphql.json /scripts/graphQL_test.js"
+    command: run /scripts/graphQL_test.js 
+
 
 
 
