--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,30 @@
 version: "3.8"
 
-
+#####   Container networks #######
 networks: 
   bench_q:
-    external: true 
+    external: false 
 services:
 
+
+#############   Database  ######################
   redis:
     container_name: redis_bench_query
     build: ./redis # Redis Stack image + Lua script for fake dataloading; #load test works with default fake dataset, See readme.
     ports:
       - "6370:6379" # This field is fixed until later dev changes ; container: 6379
-    #environment:
-      # Preservered field for scirpt control feature; this helps future development in 
-      # multilevel query/ subquery
-      # CLI in defualt dataset benchmark 
+    env_file: # debug, user default command for payload + user number 
+      - ./.env
+    
     networks:
       - bench_q 
 
+
+#############   Client Server   ######################
   graphql:
     build: ./generic_graphQL  # Allows user to query with Redis CLI
+    tmpfs:
+      - /data # client server may cache something, but discard after closing container
     ports:
       - "4000:4000" # container: graphQL port 4000 pred-defined in code 
     depends_on: #dependent images will get built first
@@ -35,6 +40,8 @@ services:
     build: ./generic_FastAPI/restAPI/fastAPI  # Allows user to query with Redis CLI
     ports:
       - "8000:8000" # container: fastAPI port 8000 pred-defined in code 
+    tmpfs:
+      - /data # client server may cache something, but discard after closing container
     depends_on: #dependent images will get built first
       - redis
     networks:
@@ -45,28 +52,54 @@ services:
       # CLI in defualt dataset benchmark 
 
 
-  k6:
+#############   Load Test     ######################
+
+  k6_fastAPI_load_test: # for next update, do them sequentially instead of roughly parallelly at concurrent request
     image: grafana/k6
-    container_name: k6_load_test
+    container_name: fastAPI_load_test
     ports:
-      - "1100:1100"
+      - "1100:1100" # Don't really need ports since not listening 
     volumes:
       - ./load_test/results:/result
       - ./load_test/scripts:/scripts
     networks:
       - bench_q  # Attach to the shared network
     environment:
+      - FastAPI_URL= http://fast_api:8000/ 
+      - K6_OUT=influxdb=http://influxdb:8086/k6db
+      - TYPE=fastapi
 
-      - GRAPHQL_URL=http://graphql:8000/  # Set the environment variable to the GraphQL service URL 
-      - K6_OUT=influxdb=http://influxdb:8086/k6db # influx db
-    depends_on:
-      - graphql  # Ensure the 'graphql' service is ready before running tests
+    env_file: # debug, user default command for payload;
+      - ./.env
+    
+    # depends_on:
+    #   - graphql  # Ensure the 'graphql' service is ready before running test
   
     command:  run  /scripts/fastAPI_test.js 
  #run --summary-export /results/graphQL_test.json  /scripts/graphQL_test.js 
       
 
+  k6_graphql_load_test: # one K6 for each API server benchmark; sequentially run
+    image: grafana/k6
+    container_name: graphQL_load_test
+    depends_on:
+      - k6_fastAPI_load_test
+    networks:
+      - bench_q
+    volumes:
+      - ./load_test/scripts:/scripts
+      - ./load_test/results:/results
+    environment:
+      - GraphQL_URL= http://graphql:4000/ 
+      - K6_OUT=influxdb=http://influxdb:8086/k6db
+      - TYPE=graphql
+    env_file: # debug, user default command for payload;
+      - ./.env
+    
+    command: run /scripts/graphQL_test.js 
 
+
+############### Visualization of Benchmark from Load Test       ##########################
 
   influxdb:
     image: influxdb:1.8
@@ -76,7 +109,7 @@ services:
     volumes:
       - influxdb_data:/var/lib/influxdb # Presistance prupose;  V6 directly output to influx; to delete, check docker volume ls then docker volume rm xxx
     networks:
-      - bench_q_debug
+      - bench_q
     depends_on:
       - k6
     environment:
@@ -90,7 +123,7 @@ services:
     ports:
       - "3000:3000" # post-result dashboard: loacalhost:3000
     networks:
-      - bench_q_debug
+      - bench_q
     depends_on:
       - influxdb # V6 output -> influx DB -> gradana
     environment:
@@ -103,7 +136,7 @@ services:
 
 
 
-volumes: # For presistance
+volumes: # For presistance in dashboard and logging
   influxdb_data:
   grafana_data:
   
@@ -111,7 +144,10 @@ volumes: # For presistance
 # 
 
 ### If any sub component fails:
-# docker-compose up -d failed_conta
+# docker-compose up -d failed_instance
+
+#### Gracefulluy shutdown:
+# docker-compose down
 
 
 #### aggregated containers: 
