fast api client server + toxic proxy + redis dataset loading + readme update, test with proxy works

--- a/redis/Dockerfile
+++ b/redis/Dockerfile
@@ -5,8 +5,8 @@ COPY redis_dataset/1.lua /1.lua
 COPY redis_dataset/2.lua /2.lua
 
 
-COPY entrypoint.sh /entrypoint.sh
+COPY entrypoint.sh /.sh
 
 RUN chmod +x /entrypoint.sh
 
-CMD ["/entrypoint.sh"]
+ENTRYPOINT ["/bin/sh", "/entrypoint.sh"]
